syntax = "proto3";

package chittychat;
option go_package = "./proto";

service ChittyChatService {
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Publish(PublishRequest) returns (PublishResponse);
    rpc Leave (LeaveRequest) returns (LeaveResponse);
    rpc Broadcast(BroadcastMessage) returns (stream BroadcastMessage);
}

message JoinRequest {
    string participant_id = 1;
  }
  
message JoinResponse {
    string message = 1;
    int64 lamport_time = 2;
}
  
message PublishRequest {
    string participant_id = 1;
    string message = 2;
}
  
message PublishResponse {
    string message = 1;
    int64 lamport_time = 2;
}
  
message LeaveRequest {
    string participant_id = 1;
}
  
message LeaveResponse {
    string message = 1;
    int64 lamport_time = 2;
}
  
message BroadcastMessage {
    string participant_id = 1;
    string message = 2;
    int64 lamport_time = 3;
}